# log-credentials

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  libnss_log_credentials.c  log_credentials.c  log_credentials_common.h
etc/pam.d/: log-credentials
pam-examples/centos/: sshd  su  sudo
pam-examples/ubuntu/: sshd  su  sudo
selinux/: log-credentials-sshd.te
